--- a/camila/index.html
+++ b/camila/index.html
@@ -16,7 +16,11 @@
        <div class="filha2">
          <h2>Perguntas Frequentes<h2> 
          <h3> Veja as respostas para as perguntas mais frequentes sobre nosso produto e serviço.</h3>
-         <button> Saiba mais </button>
+         <a href="../ester/index.html">
+            <button> Saiba mais </button>
+
+        </a>
+          
          </div>
     </div>
 
