--- a/ester/index.html
+++ b/ester/index.html
@@ -11,7 +11,10 @@
     <div class="container">
 
       <div class="botao">
-        <div class="btn">CONTATO</div>
+        <a href="../camila/index.html">
+
+            <div class="btn">CONTATO</div>
+        </a>
       </div>
       
         <div class="up">
